--- a/Lista NPS Positivo_V4.ipynb
+++ b/Lista NPS Positivo_V4.ipynb
@@ -497,25 +497,44 @@
       "cell_type": "code",
       "source": [
         "# Função para classificar as notas\n",
-        "df_filter_total['target'] = df['nota'].apply(lambda x: 'Promotor' if x >= 9 else ('Neutro' if x >= 7 else 'Detrator'))"
+        "df_norte['target'] = df_norte['nota'].apply(lambda x: 'Promotor' if x >= 9 else ('Neutro' if x >= 7 else 'Detrator'))\n",
+        "\n",
+        "# Verifique se 'safra' foi criada antes, se não, crie-a:\n",
+        "df_norte['data_resposta'] = pd.to_datetime(df_norte['data_resposta'], dayfirst=True)\n",
+        "df_norte['safra'] = df_norte['data_resposta'].dt.year\n",
+        "\n",
+        "# Calcular volumetria por safra e target\n",
+        "volumetria_safra_target = df_norte.groupby(['safra', 'target']).size().reset_index(name='quantidade')\n",
+        "\n",
+        "# Calcular percentuais dentro de cada safra\n",
+        "volumetria_safra_target['percentual'] = volumetria_safra_target.groupby('safra')['quantidade'].transform(lambda x: x / x.sum() * 100)\n",
+        "\n",
+        "# Resultado\n",
+        "print(volumetria_safra_target)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "D6V3MHB66llz",
-        "outputId": "af04cba3-6302-49b1-ed6c-bb31ffa5bcca"
+        "outputId": "ae103e98-70e0-432a-db44-58f3d74b8604"
       },
-      "execution_count": 52,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "<ipython-input-52-888b44a93158>:2: SettingWithCopyWarning: modifications to a property of a datetimelike object are not supported and are discarded. Change values on the original.\n",
-            "  df_filter_total['target'] = df['nota'].apply(lambda x: 'Promotor' if x >= 9 else ('Neutro' if x >= 7 else 'Detrator'))\n",
-            "<ipython-input-52-888b44a93158>:2: SettingWithCopyWarning: modifications to a property of a datetimelike object are not supported and are discarded. Change values on the original.\n",
-            "  df_filter_total['target'] = df['nota'].apply(lambda x: 'Promotor' if x >= 9 else ('Neutro' if x >= 7 else 'Detrator'))\n"
+            "   safra    target  quantidade  percentual\n",
+            "0   2022  Detrator           2    8.000000\n",
+            "1   2022    Neutro           5   20.000000\n",
+            "2   2022  Promotor          18   72.000000\n",
+            "3   2023  Detrator           7    8.641975\n",
+            "4   2023    Neutro          16   19.753086\n",
+            "5   2023  Promotor          58   71.604938\n",
+            "6   2024  Detrator           7   11.290323\n",
+            "7   2024    Neutro           7   11.290323\n",
+            "8   2024  Promotor          48   77.419355\n"
           ]
         }
       ]
