--- a/Lista NPS Positivo_V4.ipynb
+++ b/Lista NPS Positivo_V4.ipynb
@@ -11,6 +11,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#IMPORTANDO A LISTA PARA ANALISE, AVALIAÇÃO FINAL DATA SCIENCE"
+      ],
+      "metadata": {
+        "id": "3edWfRocH-WD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n"
@@ -255,22 +264,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Verificando as primeiras linhas\n",
-        "#print(df.head())\n",
-        "\n",
-        "# Resumo estatístico\n",
-        "#print(df.describe())\n",
-        "\n",
-        "# Informações sobre o DataFrame\n",
-        "#print(df.info())\n"
+        "#**ITEM 1 DA LISTA**\n"
       ],
       "metadata": {
-        "id": "4YVrT9Jm42nM"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "d6UVTxhdHTpg"
+      }
     },
     {
       "cell_type": "code",
@@ -294,6 +294,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**ITEMS 2, 3, 4 ,5 E 6 DA LISTA**"
+      ],
+      "metadata": {
+        "id": "2WlcRQLyHkN7"
+      }
     },
     {
       "cell_type": "code",
@@ -376,6 +385,15 @@
       },
       "execution_count": 28,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TESTE ITEM 7**"
+      ],
+      "metadata": {
+        "id": "TdroNJt2HGBl"
+      }
     },
     {
       "cell_type": "code",
@@ -494,8 +512,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#CÓDIGO FINAL ITEM 7\n"
+      ],
+      "metadata": {
+        "id": "0d2yrF6BG63I"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "#ITEM 7 DA LISTA\n",
+        "\n",
         "# Função para classificar as notas\n",
         "df_norte['target'] = df_norte['nota'].apply(lambda x: 'Promotor' if x >= 9 else ('Neutro' if x >= 7 else 'Detrator'))\n",
         "\n",
