--- a/Lista NPS Positivo_V4.ipynb
+++ b/Lista NPS Positivo_V4.ipynb
@@ -39,7 +39,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 73
         },
         "id": "dbG8ADph4-Ek",
         "outputId": "29a5dcad-ef34-4964-ff67-c1e1ca8e1c41"
@@ -578,6 +578,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "correlação de spearman, entre a variável nota e as demais variáveis de perguntas"
+      ],
+      "metadata": {
+        "id": "HFVFkd7_krm1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -626,11 +635,11 @@
         "print(correlacoes_grupo_sorted_df)\n"
       ],
       "metadata": {
-        "id": "5rtKAHe9aI3x",
-        "outputId": "febdb8a6-5b40-476e-cec2-624ef46d3c1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5rtKAHe9aI3x",
+        "outputId": "febdb8a6-5b40-476e-cec2-624ef46d3c1c"
       },
       "execution_count": 63,
       "outputs": [
@@ -687,12 +696,12 @@
         "styled_df\n"
       ],
       "metadata": {
-        "id": "bheZ_v9JdpCc",
-        "outputId": "8ca7ea88-4981-4847-ca95-77ae139dd675",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 652
-        }
+        },
+        "id": "bheZ_v9JdpCc",
+        "outputId": "8ca7ea88-4981-4847-ca95-77ae139dd675"
       },
       "execution_count": 64,
       "outputs": [
@@ -832,11 +841,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "yYXNLxYBeV-v",
-        "outputId": "6ce22473-7372-4370-e1d1-6548c8c4b844",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yYXNLxYBeV-v",
+        "outputId": "6ce22473-7372-4370-e1d1-6548c8c4b844"
       },
       "execution_count": 82,
       "outputs": [
@@ -975,12 +984,12 @@
         "    print(\"\\n\")\n"
       ],
       "metadata": {
-        "id": "_MBtY5XpjrWo",
-        "outputId": "2fc54f2a-fd92-4d0d-f216-6e01119cf4cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "_MBtY5XpjrWo",
+        "outputId": "2fc54f2a-fd92-4d0d-f216-6e01119cf4cb"
       },
       "execution_count": 83,
       "outputs": [
@@ -1626,6 +1635,217 @@
           "text": [
             "\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "-->"
+      ],
+      "metadata": {
+        "id": "L2myGKIBlq95"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Apresentar também a lista de correlações Safrada, uma lista por safra, replicando o trabalho para cada região e período de pesquisa."
+      ],
+      "metadata": {
+        "id": "Mw1bCkxDlkgQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Função para calcular a correlação de Spearman para cada safra\n",
+        "def calcular_correlacao_safra(df, perguntas, target_col='nota'):\n",
+        "    correlacoes = {}\n",
+        "    for pergunta in perguntas:\n",
+        "        corr, _ = spearmanr(df[target_col], df[pergunta], nan_policy='omit')\n",
+        "        correlacoes[pergunta] = corr\n",
+        "    return correlacoes\n"
+      ],
+      "metadata": {
+        "id": "HufAX1AGlmdG"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Verificando a correlação de Spearman entre quantidade e percentual"
+      ],
+      "metadata": {
+        "id": "OVMbyF8spLzW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import spearmanr\n",
+        "\n",
+        "# Função para calcular correlação de Spearman\n",
+        "def calcular_correlacao_safra_target(df, col1, col2):\n",
+        "    corr, _ = spearmanr(df[col1], df[col2], nan_policy='omit')\n",
+        "    return corr\n",
+        "\n",
+        "# Dicionário para armazenar as correlações por safra\n",
+        "correlacoes_por_safra_target = {}\n",
+        "\n",
+        "# Calculando a correlação entre 'quantidade' e 'percentual' por safra\n",
+        "for safra, df_safra in volumetria_safra_target.groupby('safra'):\n",
+        "    correlacoes_por_safra_target[safra] = calcular_correlacao_safra_target(df_safra, 'quantidade', 'percentual')\n",
+        "\n",
+        "# Exibir as correlações por safra\n",
+        "for safra, correlacao in correlacoes_por_safra_target.items():\n",
+        "    print(f\"Correlação entre 'quantidade' e 'percentual' para a Safra: {safra} = {correlacao}\")\n"
+      ],
+      "metadata": {
+        "id": "va_hhDITl0P7",
+        "outputId": "1cda8d13-d641-4928-ba5b-ef117bd6c465",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correlação entre 'quantidade' e 'percentual' para a Safra: 2022 = 1.0\n",
+            "Correlação entre 'quantidade' e 'percentual' para a Safra: 2023 = 1.0\n",
+            "Correlação entre 'quantidade' e 'percentual' para a Safra: 2024 = 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Função para aplicar a cor nas correlações\n",
+        "def colorir_correlações(val):\n",
+        "    if abs(val) >= 0.7:\n",
+        "        color = 'red'  # Correlação forte\n",
+        "    elif abs(val) >= 0.4:\n",
+        "        color = 'blue'  # Correlação média\n",
+        "    else:\n",
+        "        color = 'green'  # Correlação fraca\n",
+        "    return f'background-color: {color}'\n",
+        "\n",
+        "# Visualizando as correlações com cores\n",
+        "correlacoes_df = pd.DataFrame(list(correlacoes_por_safra_target.items()), columns=['Safra', 'Correlação'])\n",
+        "\n",
+        "# Aplicando a coloração nas correlações\n",
+        "styled_df = correlacoes_df.style.applymap(lambda x: colorir_correlações(x), subset=['Correlação'])\n",
+        "\n",
+        "# Exibindo a tabela estilizada\n",
+        "display(styled_df)\n"
+      ],
+      "metadata": {
+        "id": "Uc78_KTko_3C",
+        "outputId": "d183832d-b281-4f2c-c05e-8e8407ec67fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-101-3780b295463c>:15: FutureWarning: Styler.applymap has been deprecated. Use Styler.map instead.\n",
+            "  styled_df = correlacoes_df.style.applymap(lambda x: colorir_correlações(x), subset=['Correlação'])\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7b966a031a80>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "#T_6fd3c_row0_col1, #T_6fd3c_row1_col1, #T_6fd3c_row2_col1 {\n",
+              "  background-color: red;\n",
+              "}\n",
+              "</style>\n",
+              "<table id=\"T_6fd3c\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th id=\"T_6fd3c_level0_col0\" class=\"col_heading level0 col0\" >Safra</th>\n",
+              "      <th id=\"T_6fd3c_level0_col1\" class=\"col_heading level0 col1\" >Correlação</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_6fd3c_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+              "      <td id=\"T_6fd3c_row0_col0\" class=\"data row0 col0\" >2022</td>\n",
+              "      <td id=\"T_6fd3c_row0_col1\" class=\"data row0 col1\" >1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_6fd3c_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+              "      <td id=\"T_6fd3c_row1_col0\" class=\"data row1 col0\" >2023</td>\n",
+              "      <td id=\"T_6fd3c_row1_col1\" class=\"data row1 col1\" >1.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_6fd3c_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+              "      <td id=\"T_6fd3c_row2_col0\" class=\"data row2 col0\" >2024</td>\n",
+              "      <td id=\"T_6fd3c_row2_col1\" class=\"data row2 col1\" >1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Função para calcular a correlação de Spearman para 'target' e outras variáveis\n",
+        "def calcular_correlacao_por_target(df, target, col):\n",
+        "    df_target = df[df['target'] == target]\n",
+        "    corr, _ = spearmanr(df_target[col], df_target['quantidade'], nan_policy='omit')\n",
+        "    return corr\n",
+        "\n",
+        "# Dicionário para armazenar as correlações por target\n",
+        "correlacoes_por_target = {}\n",
+        "\n",
+        "# Calcular a correlação entre 'quantidade' e 'target'\n",
+        "for target in volumetria_safra_target['target'].unique():\n",
+        "    correlacoes_por_target[target] = calcular_correlacao_por_target(volumetria_safra_target, target, 'quantidade')\n",
+        "\n",
+        "# Exibir as correlações\n",
+        "print(\"Correlação entre 'quantidade' e 'target':\")\n",
+        "for target, corr in correlacoes_por_target.items():\n",
+        "    print(f\"Target {target}: {corr}\")\n"
+      ],
+      "metadata": {
+        "id": "WtCvCwSdpZLP",
+        "outputId": "e156bf45-ba71-4491-9569-5eaaadeeef06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correlação entre 'quantidade' e 'target':\n",
+            "Target Detrator: 1.0\n",
+            "Target Neutro: 1.0\n",
+            "Target Promotor: 1.0\n"
           ]
         }
       ]
